[In progress][Bug] #31702 - Employee search - Font colour of place holder should be readable in I-pad

--- a/src/app/app.scss
+++ b/src/app/app.scss
@@ -436,6 +436,11 @@ ion-app.wp {
     color: #fff;
     border-bottom: 1px solid #fff;
     margin: 0 10px;
+
+    .text-input::-webkit-input-placeholder {
+      color: map-get($colors, whiteColor);
+      opacity: 0.8;
+    }
   }
 }
 
